--- a/1.html
+++ b/1.html
@@ -13,14 +13,16 @@
     />
   </head>
   <body>
-    <div class="container">
+    <div class="container m-5">
       <div class="row border">
-        <img
-          src="/BootstrapMocksAssignment/Contact-Thumbnail-Placeholder.jpg"
-          alt="..."
-          class="img-thumbnail m-5"
-        />
-        <div class="col">
+        <div class="col-4">
+          <img
+            src="/BootstrapMocksAssignment/Contact-Thumbnail-Placeholder.jpg"
+            alt="..."
+            class="img-thumbnail m-4"
+          />
+        </div>
+        <div class="col-7">
           <p class="m-5 text-justify">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
             est consectetur mollitia commodi ullam, doloribus consequuntur
@@ -30,7 +32,7 @@
         </div>
       </div>
       <div class="row border">
-        <div class="col">
+        <div class="col-7">
           <p class="m-5 text-justify">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Exercitationem mollitia dolor dignissimos perferendis, assumenda
@@ -38,21 +40,24 @@
             provident sunt quas fuga fugiat? Sequi laboriosam animi magnam.
           </p>
         </div>
-      </div>
-        <img
-          src="/BootstrapMocksAssignment/Contact-Thumbnail-Placeholder.jpg"
-          alt="..."
-          class="img-thumbnail m-5"
-        />
+        <div class="col-4">
+          <img
+            src="/BootstrapMocksAssignment/Contact-Thumbnail-Placeholder.jpg"
+            alt="..."
+            class="img-thumbnail m-4"
+          />
+        </div>
       </div>
       <div class="row border">
-        <img
-          src="/BootstrapMocksAssignment/Contact-Thumbnail-Placeholder.jpg"
-          alt="..."
-          class="img-thumbnail m-5"
-        />
-        <div class="col">
-          <p class="m-3 text-justify">
+        <div class="col-4">
+          <img
+            src="/BootstrapMocksAssignment/Contact-Thumbnail-Placeholder.jpg"
+            alt="..."
+            class="img-thumbnail m-4"
+          />
+        </div>
+        <div class="col-7">
+          <p class="m-5 text-justify">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
             est consectetur mollitia commodi ullam, doloribus consequuntur
             explicabo ipsum quaerat, corporis molestias inventore perspiciatis
