--- a/1.html
+++ b/1.html
@@ -13,8 +13,8 @@
     />
   </head>
   <body>
-    <div class="container m-5">
-      <div class="row border">
+    <div class="container border border-dark m-5">
+      <div class="row border border-dark">
         <div class="col-4">
           <img
             src="/BootstrapMocksAssignment/Contact-Thumbnail-Placeholder.jpg"
@@ -31,7 +31,7 @@
           </p>
         </div>
       </div>
-      <div class="row border">
+      <div class="row border border-dark">
         <div class="col-7">
           <p class="m-5 text-justify">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -48,7 +48,7 @@
           />
         </div>
       </div>
-      <div class="row border">
+      <div class="row border border-dark">
         <div class="col-4">
           <img
             src="/BootstrapMocksAssignment/Contact-Thumbnail-Placeholder.jpg"
