--- a/2.html
+++ b/2.html
@@ -13,36 +13,9 @@
     />
   </head>
   <body>
-    <div class="container border m-5">
+    <div class="container border border-dark m-5">
       <h1 class="display-2 text-center m-5">Advanced Widgit Inc.</h1>
       <div class="row">
-        <div class="col">
-          <img
-            src="/BootstrapMocksAssignment/Contact-Thumbnail-Placeholder.jpg"
-            class="img-thumbnail"
-          />
-          <p class="text-center">
-            No
-          </p>
-        </div>
-        <div class="col">
-          <img
-            src="/BootstrapMocksAssignment/Contact-Thumbnail-Placeholder.jpg"
-            class="img-thumbnail"
-          />
-          <p class="text-center">
-            Me
-          </p>
-        </div>
-        <div class="col">
-          <img
-            src="/BootstrapMocksAssignment/Contact-Thumbnail-Placeholder.jpg"
-            class="img-thumbnail"
-          />
-          <p class="text-center">
-            Gusta
-          </p>
-        </div>
         <div class="col">
           <img
             src="/BootstrapMocksAssignment/Contact-Thumbnail-Placeholder.jpg"
@@ -52,8 +25,35 @@
             Bootstrap
           </p>
         </div>
+        <div class="col">
+          <img
+            src="/BootstrapMocksAssignment/Contact-Thumbnail-Placeholder.jpg"
+            class="img-thumbnail"
+          />
+          <p class="text-center">
+            Is
+          </p>
+        </div>
+        <div class="col">
+          <img
+            src="/BootstrapMocksAssignment/Contact-Thumbnail-Placeholder.jpg"
+            class="img-thumbnail"
+          />
+          <p class="text-center">
+            The
+          </p>
+        </div>
+        <div class="col">
+          <img
+            src="/BootstrapMocksAssignment/Contact-Thumbnail-Placeholder.jpg"
+            class="img-thumbnail"
+          />
+          <p class="text-center">
+            Best!
+          </p>
+        </div>
       </div>
-      <div class="border m-5">
+      <div class="border border-dark m-5">
         <p class="m-5">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam quia,
           eaque, aperiam neque unde voluptate iste quasi saepe qui deserunt
